# vigil-redteam

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  redteam.local.toml  redteam.prod.toml  redteam.toml.example
datasets/coverage/: enterprise.jsonl  hackaprompt.jsonl  oasst2_pl.jsonl  spml.jsonl  systemchat.jsonl
datasets/experimental/agent_context/: benign_agent_context_pl.jsonl
datasets/golden/: benign_business_en.jsonl  benign_business_en_advanced.jsonl  benign_business_pl.jsonl  benign_business_pl_advanced.jsonl  benign_code.jsonl  benign_security_research.jsonl  context_inconsistency.jsonl  context_inconsistency_advanced.jsonl  data_exfiltration.jsonl  instruction_override.jsonl  instruction_override_advanced.jsonl  multiturn_slowburn.jsonl  obfuscation.jsonl  obfuscation_advanced.jsonl  semantic_evasion.jsonl  tool_agent_abuse.jsonl
src/vigil_redteam/: __init__.py  __main__.py  cli.py  config.py
src/vigil_redteam/client/: vge.py
src/vigil_redteam/importers/: base.py  enterprise.py  golden.py  hackaprompt.py  oasst2.py  pangea.py  spml.py  systemchat.py
src/vigil_redteam/metrics/: pipeline.py  robustness.py  security.py  usability.py
src/vigil_redteam/mutation/: engine.py  mutators.py  registry.py
src/vigil_redteam/reporting/: generator.py  markdown.py
src/vigil_redteam/runner/: comparator.py  executor.py  filters.py
tests/: conftest.py  test_branch_parsing.py  test_comparator.py  test_filters.py  test_importers.py  test_metrics.py  test_mutation.py  test_scenario_metadata.py  test_schema.py  test_vge_client.py
(+5 files in other folders)
