[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigil-redteam"
version = "0.1.0"
description = "Adversarial testing framework for Vigil Guard Enterprise"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vigil Guard", email = "dev@vigilguard.ai" }]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
vigil-redteam = "vigil_redteam.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vigil_redteam"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
